# fastapi_lambda

./: Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py
app/config/: settings.py
app/routers/: __init__.py  example.py  main.py
app/schemas/: __init__.py  example.py  greeting.py
