[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["huylenguyen <huylenguyen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.7"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
mangum = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
